rust/kcl-lib/tests/sketch_block_unexpected_argument/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing sketch_block_unexpected_argument.kcl
---
KCL Semantic error

  × semantic: `bar` is not an argument of `sketch`
   ╭─[3:18]
 2 │ 
 3 │ s = sketch(bar = 1, on = XY) {
   ·                  ┬
   ·                  ╰── main
 4 │   circle1 = circle(start = [var 0.42mm, var 0.2mm], center = [var 0.25mm, var 0.35mm])
   ╰────
